# wiki

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  manage.py  pyproject.toml
ai_templates/: README.md  article.html  compare.html  steps.html
apps/accounts/: forms.py  middleware.py  urls.py  views.py
apps/core/: converters.py  views.py
apps/documents/: admin.py  fts.py  models.py  urls.py  utils.py  views.py
apps/documents/migrations/: 0001_initial.py  0002_fts5.py  0003_fts5_trigram.py  (+4 more)
apps/editor/: sanitizer.py  urls.py  validator.py  views.py
apps/publishing/: urls.py  views.py
apps/skills/: admin.py  models.py  urls.py  views.py
apps/workspaces/: admin.py  apps.py  context.py  models.py  permissions.py  urls.py  views.py
docs/: 01-需求文档.md  02-技术文档.md  CLAUDE.md  design-preview.html  原子能力优化建议.html  执行计划-V2.0.md
docsite/: asgi.py  urls.py  wsgi.py
docsite/settings/: base.py  dev.py  prod.py
skills/: skill-document-generation-v0.1.md
skills/html-document/: SKILL.md
static/css/: admin.css  public.css
static/js/: doc_frame.js  editor.js  public_shell.js  publish.js  versions.js
templates/: 404.html  base.html  base_public.html  docs_index.html  home.html  landing.html
templates/accounts/: login.html
templates/admin_ui/: _folder_select.html  base_admin.html  dashboard.html  doc_detail.html  import.html  import_result.html  users.html
templates/doc/: detail.html
templates/skills/: skill_list.html
templates/workspaces/: _tree_node.html  workspace_home.html  workspace_trash.html
tests/: test_placeholder.py
(+5 files in other folders)
