[project]
name = "docsite"
version = "0.1.0"
description = "Internal document management system"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "whitenoise>=6.8",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a14",
    "pytest>=8.3",
    "pytest-django>=4.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "docsite.settings.dev"
pythonpath = ["."]

[tool.ty]
environment = { python = ".venv/bin/python" }

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]
